- **Consistent Messaging**: Timeout errors report exact seconds from the configured value.
- **AbortController**: All providers use AbortController with the configured timeouts.

### Instrumentation
- **Per-call timing logs**: Added `[CALL_AI_TIMING] <provider>/<model> took <ms>` around Azure/OpenAI/Bedrock calls to identify slow batches.

### Routing and Logging
- **RoutingMode Support**: Backend respects `routingMode` and adjudicated flags to route each comment to the correct provider/model (Scan A vs Scan B) for both phases; evenly splits when both flagged.
- **Detailed Chunk Logs**: Added per-chunk token logs showing input (incl. prompt), estimated output for redaction and rephrase using I/O ratios, and model limits used for gating.

### Conservative Limits Across Models
- **Cross-Model Conservative Limits**: Batch building and AI `max_tokens` now use the most conservative (lowest) input and output token limits across all routed models in a run to ensure uniform safety regardless of grouping.

### Input/Output Improvements
- **Better Format Handling**: Improved parsing of AI responses
- **ID Tagging Support**: Enhanced support for ID-tagged responses
- **Result Validation**: Better validation of transformation results
- **Error Recovery**: Improved handling of malformed responses

### Integration Enhancements
- **Seamless Integration**: Better integration with scan-comments and adjudicator
- **Shared Infrastructure**: Uses same authentication and configuration systems
- **Consistent Logging**: Unified logging and monitoring approach
- **Data Consistency**: Maintains consistency across the processing pipeline

### Monitoring and Logging
- **AI Interaction Logging**: Complete logging of all AI transformations
- **Performance Metrics**: Detailed timing and efficiency measurements
- **Error Correlation**: Better error tracking with scan run IDs
- **Usage Analytics**: Comprehensive usage and performance analytics